--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "chart.js": "^4.4.4",
+    "firebase": "^10.14.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
